fix layout issues

--- a/css/main.less
+++ b/css/main.less
@@ -4,8 +4,8 @@ html, body {
 	margin: 0;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	font-weight: 300;
-	width: 100%;
-	height: 100%;
+	min-width: 100%;
+	min-height: 100%;
 }
 
 body {
@@ -77,6 +77,7 @@ img {
 #social {
 
 	margin-top: 100px;
+	padding-bottom: 50px;
 	
 	a {
 		display: inline-block;
